[package]
name = "silica"
version = "0.1.0"
authors = ["Anishjindal08@gmail.com <anishjindal08@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
